@@ -2,7 +2,7 @@
 #define SG_CMDS_BASIC_H
 
 /*
- * Copyright (c) 2004-2013 Douglas Gilbert.
+ * Copyright (c) 2004-2014 Douglas Gilbert.
  * All rights reserved.
  * Use of this source code is governed by a BSD-style
  * license that can be found in the BSD_LICENSE file.
@@ -235,13 +235,15 @@ const char * sg_cmds_version();
 
 struct sg_pt_base;
 
-/* This is a helper function used by sg_cmds_* implementations after
- * the call to the pass-through. pt_res is returned from do_scsi_pt().
- * If valid sense data is found it is decoded and output to sg_warnings_strm
- * (def: stderr); depending on the 'noisy' and 'verbose' settings.
- * Returns -2 for sense data (may not be fatal), -1 for failed or the
- * number of data in bytes received. For data out (to device) or no data,
- * set 'mx_di_len' to 0 or less. If -2 returned then sense category
+/* This is a helper function used by sg_cmds_* implementations after the
+ * call to the pass-through. pt_res is returned from do_scsi_pt(). If valid
+ * sense data is found it is decoded and output to sg_warnings_strm (def:
+ * stderr); depending on the 'noisy' and 'verbose' settings. Returns -2 for
+ * sense data (may not be fatal), -1 for failed, 0, or a positive number. If
+ * 'mx_di_len > 0' then asks pass-through for resid and returns
+ * (mx_di_len - resid); otherwise returns 0. So for data-in it should return
+ * the actual number of bytes received. For data-out (to device) or no data
+ * call with 'mx_di_len' set to 0 or less. If -2 returned then sense category
  * output via 'o_sense_cat' pointer (if not NULL). Note that several sense
  * categories also have data in bytes received; -2 is still returned. */
 int sg_cmds_process_resp(struct sg_pt_base * ptvp, const char * leadin,
